# chronos_api

./: .dockerignore  .editorconfig  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml
app/: config.py  logger.py  main.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: groups.py  timetable.py
app/core/: chronos.py  config.py  network.py  redis.py  timetable.py
app/models/: __init__.py  group.py  reason.py  timetable.py
